# flash_attn_jax

./: .clang-format  .clangd  .gitignore  AUTHORS  CMakeLists.txt  README.md  Tupfile  lame_test.py  make_compile_commands.py  pyproject.toml  set_tag_in_wheels.py  setup.py
.github/workflows/: publish.yml
csrc/flash_attn/: check.h  flash_api.cpp  flash_common.cpp  flash_common.h  mha_bwd.cpp  mha_bwd.h  mha_fwd.cpp  mha_fwd.h
csrc/flash_attn/src/: alibi.h  dropout.h  exception.h  flash.h  flash_bwd_kernel.h  flash_bwd_launch_template.h  flash_fwd_kernel.h  flash_fwd_launch_template.h  kernel_traits.h  mask.h  similarity.h  utils.h
csrc/xla/ffi/api/: api.h
flash_attn_jax/: flash.py
scripts/: install-cuda-linux.sh
src/flash_attn_jax/: __init__.py  flash.py  flash_hlo.py  flash_sharding.py  ring_attention.py  varlen.py  varlen_bwd.py  varlen_fwd.py
tests/: ref_mha.py  test_cross.py  test_flash.py  test_ring.py  test_sharding.py  test_varlen.py
